fix whitespace

--- a/src/components/FormCalculator/index.scss
+++ b/src/components/FormCalculator/index.scss
@@ -118,5 +118,6 @@
 
   @media (max-width: 1399px) {
     margin-left: 14px !important;
+    transform: translate(0, 100%) !important;
   }
 }
